--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
