--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
+    "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "dom-to-image-more": "^3.7.2",
     "html2canvas": "^1.4.1",
