--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.5.1",
