--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "papaparse": "^5.5.3",
+    "razorpay": "^2.9.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.6.0",
